[package]
name = "duino-miner"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] }
sha1 = "0.10.1"
hex = "0.4.3"
serde_yaml = "0.9.14"
rand = "0.8.5"
clap = { version = "4.0.28", features = ["cargo"] }