[package]
name = "duino-miner"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
sha1 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
rand = "0.8"
clap = { version = "4.4", features = ["cargo"] }
anyhow = "1.0"